# biceps

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  install.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  float_type.hpp  install_manifest.txt
.build/.cache/clangd/index/: float_type.hpp.1F98BFABA9F7C45D.idx
.build/src/: Makefile  cmake_install.cmake
.build/unit_tests/: Makefile  cmake_install.cmake  fem_2d_test_suite  mesh_test_suite  poisson_test_suite  stokes_test_suite
.cache/clangd/index/: eigen_spmat_addons.hpp.0B21810FA14655C1.idx  eigen_spmat_addons.hpp.46F4F98553E82F75.idx  eigen_spmat_addons.hpp.85322980BB3AEE14.idx  enums.hpp.15C3D8032486CFE0.idx  enums.hpp.6E5738D1FAAB5CBF.idx  enums.hpp.BD9A12A4924A7227.idx  fem_1d.cpp.10C5220F3A446BF2.idx  fem_1d.cpp.4AFDC15DDA25EF2D.idx  fem_1d.cpp.A339B31A1D996903.idx  fem_1d.hpp.92CA21B10961DA68.idx  fem_1d.hpp.BB01166F8B870132.idx  fem_1d.hpp.D3EAB3550C7745FE.idx  fem_2d.cpp.8E9337650DBF93CB.idx  fem_2d.cpp.9B3C57EE8105DCC0.idx  fem_2d.cpp.B4C9ADBDAC3D3CC3.idx  fem_2d.hpp.90FE0BE777159E91.idx  fem_2d.hpp.C5A2F97104CD5899.idx  fem_2d.hpp.F1BCDDEF3830CF09.idx  fem_2d_test_suite.cpp.B057BCE1FF367A8E.idx  fem_2d_test_suite.cpp.BC37BE75C9400F1D.idx  fem_2d_test_suite.cpp.D1FA92D1EBD7C282.idx  fem_2d_test_suite.hpp.1C34BCCB8ECC5892.idx  fem_2d_test_suite.hpp.D6D9815979E686D3.idx  fem_2d_test_suite.hpp.E6F4353AEBA0EB79.idx  fem_function_1d.cpp.6C6BBF0E8E1AAF6C.idx  fem_function_1d.cpp.C5B2408C391A916B.idx  fem_function_1d.cpp.CBE2B70867E6D9DD.idx  fem_function_1d.hpp.53908FDD6FBF9BE9.idx  fem_function_1d.hpp.5FF81325A264FEDC.idx  fem_function_1d.hpp.B950201FCF9D3148.idx  fem_function_2d.cpp.10A54CA4676A8B05.idx  fem_function_2d.cpp.7C870B069B40EEB3.idx  fem_function_2d.cpp.B5E50C7ECA9D967F.idx  fem_function_2d.hpp.23276EDAA9DD27A2.idx  fem_function_2d.hpp.C533ADE7C0F99C1E.idx  fem_function_2d.hpp.E129DA024921589C.idx  float_type.hpp.5474BE6C3221BD2C.idx  float_type.hpp.DAEE6DC72190AFB4.idx  free_surface_fem.cpp.945292D71E577F9A.idx  free_surface_fem.cpp.A7E7F497789B9E4F.idx  (+56 more)
cmake_modules/: FindXDMF.cmake
demos/Python/: biceps.py  biceps_demo.py  poisson_demo.py  pstokes_demo.py  stokes_demo.py
demos/cpp/: CMakeLists.txt  biceps.cpp  biceps_demo.cpp  install.sh  stokes_demo.cpp
demos/julia/: biceps_demo.jl
dev-tests/: assemble_left_tri.py  free_surface.py  lumped_mass_matrix_1x1.py  mass_matrix_1x1.py  numeric_jacobian.py  print_gauss_point_quadrilateral_2d.py  quad_mapping.py  symbolic_jacobian_1x1_q1.py  symbolic_jacobian_1x1_q2.py  symbolic_jacobian_4x1_q1.py  tri_mapping.py
include/: eigen_spmat_addons.hpp  enums.hpp  fem_1d.hpp  fem_2d.hpp  fem_function_1d.hpp  fem_function_2d.hpp  float_type_config.hpp  free_surface_fem.hpp  interval_mesh.hpp  io_handler.hpp  logger.hpp  poisson_fem.hpp  pstokes_fem.hpp  structured_mesh.hpp  time_integrator.hpp
src/: .null-ls_693129_interval_mesh.cpp  .null-ls_945298_pstokes_fem.cpp  CMakeLists.txt  biceps.cpp  fem_1d.cpp  fem_2d.cpp  fem_function_1d.cpp  fem_function_2d.cpp  free_surface_fem.cpp  interval_mesh.cpp  io_handler.cpp  logger.cpp  poisson_fem.cpp  pstokes_fem.cpp  pywrapper.cpp  structured_mesh.cpp  time_integrator.cpp
unit_tests/: CMakeLists.txt  fem_2d_test_suite.cpp  mesh_test_suite.cpp  poisson_test_suite.cpp  stokes_test_suite.cpp  test_free_surface.cpp
unit_tests/include/: fem_2d_test_suite.hpp  mesh_test_suite.hpp  poisson_test_suite.hpp  stokes_test_suite.hpp
